--- a/resume_parsing.ipynb
+++ b/resume_parsing.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPPCEFC/CrGgEegXE6QVKX5",
+      "authorship_tag": "ABX9TyM+y5VSvNgtVd+EZRHvL5ca",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -467,7 +467,7 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"📊 Ranked Resumes for Data Analyst Role:\")\n",
+        "print(\"Ranked Resumes for Data Analyst Role:\")\n",
         "print(df)"
       ],
       "metadata": {
